# testdata-factory

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: contract-format.md  developer-guide.md  model-profiles.md  requirements.md  troubleshooting.md  user-manual.md
engine/: pyproject.toml
engine/src/testdata_factory_engine/: __init__.py  ai.py  analyzer.py  cli.py  contracts.py  generation.py  models.py  page_object_import.py  scanner.py  schema_import.py  sdk.py  seed.py  server.py
engine/tests/: test_ai.py  test_analyzer.py  test_cli.py  test_contracts.py  test_generation.py  test_models.py  test_packaging.py  test_page_object_import.py  test_release_acceptance.py  test_release_smoke.py  test_scanner.py  test_schema_import.py  test_sdk.py  test_seed.py  test_server.py
engine/tests/fixtures/: customer.schema.json  sample_form.html
engine/tests/fixtures/page_objects/: RegisterPage.java  register.page.ts
examples/ai/: ollama.config.json
examples/contracts/: advanced-register.tdf.json  invalid-missing-fields.tdf.json  register.tdf.json
examples/frameworks/java-junit/: README.md
examples/frameworks/python-pytest/: README.md  test_register_data.py
examples/frameworks/typescript-playwright/: README.md  register.spec.ts
examples/openapi/: customer.openapi.json
examples/page-objects/java/: RegisterPage.java
examples/page-objects/python/: register_page.py
scripts/: release-smoke.sh
sdk-java/: pom.xml
sdk-java/src/main/java/dev/testdatafactory/sdk/: ContractDocument.java  LocalGenerator.java  ScenarioRequest.java  TestDataFactory.java  TestDataFactoryClient.java
sdk-java/src/test/java/dev/testdatafactory/sdk/: TestDataFactoryClientTest.java
sdk-typescript/: package-lock.json  package.json  tsconfig.json
sdk-typescript/src/: index.ts
sdk-typescript/test/: index.test.ts
specs/contract-schema/: tdf-contract.schema.json
specs/openapi/: testdata-factory.openapi.json
