[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "testdata-factory-engine"
version = "0.0.0"
description = "Core engine for TestData Factory"
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Ismail Sleem" }
]
dependencies = [
  "jsonschema>=4.22,<5"
]

[project.scripts]
tdf = "testdata_factory_engine.cli:main"

[project.optional-dependencies]
server = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1"
]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9"
]

[tool.hatch.build.targets.wheel]
packages = ["src/testdata_factory_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning"
]
