[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "testdata-factory-engine"
version = "0.1.0"
description = "Core engine and CLI for TestData Factory local-first test data generation."
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Ismail Sleem" }
]
keywords = [
  "automation",
  "qa",
  "synthetic-data",
  "test-data",
  "testing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing"
]
dependencies = [
  "jsonschema>=4.22,<5"
]

[project.scripts]
tdf = "testdata_factory_engine.cli:main"

[project.optional-dependencies]
server = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1"
]
scanner = [
  "playwright>=1.46,<2"
]
dev = [
  "httpx2>=2.0,<3",
  "pytest>=8.2,<9"
]

[project.urls]
Homepage = "https://github.com/iisleem/testdata-factory"
Repository = "https://github.com/iisleem/testdata-factory"
Issues = "https://github.com/iisleem/testdata-factory/issues"
Changelog = "https://github.com/iisleem/testdata-factory/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/testdata_factory_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "release_smoke: release-level smoke coverage for CLI, API, and SDK workflows"
]
